// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.healthcheckconfig.v1;

import "google/protobuf/empty.proto";
import "teleport/healthcheckconfig/v1/health_check_config.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/healthcheckconfig/v1;healthcheckconfigv1";

// HealthCheckConfigService provides CRUD ops for health check config resources.
service HealthCheckConfigService {
  // CreateHealthCheckConfig creates a new HealthCheckConfig.
  rpc CreateHealthCheckConfig(CreateHealthCheckConfigRequest) returns (HealthCheckConfig);

  // GetHealthCheckConfig returns the specified HealthCheckConfig.
  rpc GetHealthCheckConfig(GetHealthCheckConfigRequest) returns (HealthCheckConfig);

  // ListHealthCheckConfigs lists HealthCheckConfig resources.
  rpc ListHealthCheckConfigs(ListHealthCheckConfigsRequest) returns (ListHealthCheckConfigsResponse);

  // UpdateHealthCheckConfig updates an existing HealthCheckConfig.
  rpc UpdateHealthCheckConfig(UpdateHealthCheckConfigRequest) returns (HealthCheckConfig);

  // UpsertHealthCheckConfig creates or replaces a HealthCheckConfig.
  rpc UpsertHealthCheckConfig(UpsertHealthCheckConfigRequest) returns (HealthCheckConfig);

  // DeleteHealthCheckConfig deletes the specified HealthCheckConfig.
  rpc DeleteHealthCheckConfig(DeleteHealthCheckConfigRequest) returns (google.protobuf.Empty);
}

// Request for CreateHealthCheckConfig.
message CreateHealthCheckConfigRequest {
  // Config is the resource to create.
  HealthCheckConfig config = 1;
}

// GetHealthCheckConfigRequest is a request for GetHealthCheckConfig.
message GetHealthCheckConfigRequest {
  // Name is the name of the HealthCheckConfig to retrieve.
  string name = 1;
}

// ListHealthCheckConfigsRequest is the request for ListHealthCheckConfigs.
message ListHealthCheckConfigsRequest {
  // PageSize is the maximum number of items to return.
  // The server may impose a different page size at its discretion.
  int32 page_size = 1;
  // PageToken is the page token value returned from a prior list request, if any.
  string page_token = 2;
}

// ListHealthCheckConfigsResponse is the response from ListHealthCheckConfigs.
message ListHealthCheckConfigsResponse {
  // Configs is a page of health check configs.
  repeated HealthCheckConfig configs = 1;
  // NextPageToken is the token that can be used to retrieve the next page of
  // results or empty if there are no more pages.
  string next_page_token = 2;
}

// Request for UpdateHealthCheckConfig.
message UpdateHealthCheckConfigRequest {
  // Config is the resource to update.
  HealthCheckConfig config = 1;
}

// Request for UpsertHealthCheckConfig.
message UpsertHealthCheckConfigRequest {
  // Config is the resource to upsert.
  HealthCheckConfig config = 1;
}

// Request for DeleteHealthCheckConfig.
message DeleteHealthCheckConfigRequest {
  // Name is the name of the HealthCheckConfig to delete.
  string name = 1;
}
